--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -195,6 +195,16 @@
     }
   }
 
+  body:not(.is-panel) .header.is-login~& {
+    @include screen('lg') {
+      padding-bottom: 70px;
+    }
+
+    @include screen('sm') {
+      padding-bottom: 50px;
+    }
+  }
+
   &_panel-padding {
     @include screen('lg') {
       padding-bottom: 70px;
