--- a/app/components/header/header.pug
+++ b/app/components/header/header.pug
@@ -4,7 +4,7 @@ mixin header(authorized)
     .container
       +e.logo
         +logo()(href="/")
-      +e.NAV.navigation.hide-sm
+      +e.NAV.navigation
         +e.main
           +header-menu
         +e.user
