--- a/app/layouts/default-with-mobile-panel-login.pug
+++ b/app/layouts/default-with-mobile-panel-login.pug
@@ -4,7 +4,7 @@ include _internalIncludes
 doctype html
 html(lang='en')
   include head
-  body
+  body.is-panel
     +header.is-login
 
     +b.MAIN.page
