--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -35,4 +35,48 @@
       transform: translate3d(0, -27px, 0);
     }
   }
+
+  &__icon {
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    bottom: 16px;
+    right: 3px;
+    fill: currentColor;
+  }
+
+  &__phone {
+
+    &_code {
+      width: 44px;
+      max-width: 44px;
+    }
+
+    &_number {
+      flex: 1;
+      padding-left: 14px;
+    }
+  }
+
+  &_phone {
+    display: flex;
+    justify-content: flex-start;
+
+    &::before {
+      @include pseudo;
+
+      bottom: 10px;
+      left: 42px;
+      width: 1px;
+      height: 20px;
+      background-color: $color-form-border;
+      opacity: 0;
+      transition: opacity $ease-main;
+      pointer-events: none;
+    }
+
+    &.is-top::before {
+      opacity: 1;
+    }
+  }
 }
