--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -10,3 +10,4 @@ block content
         +link(href="ui-kit.html") UI-kit (ui-kit.html)
         +link(href="index.html") Main (index.html)
         +link(href="space.html")  One Space (space.html)
+        +link(href="account-settings.html")  Account settings (account-settings.html)
