--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -107,6 +107,10 @@
 
     &:not(:last-child) {
       margin-bottom: 42px;
+
+      @include screen('lg') {
+        margin-bottom: 30px;
+      }
     }
 
     .checkbox,
