--- a/app/blocks/grid/grid.scss
+++ b/app/blocks/grid/grid.scss
@@ -17,6 +17,12 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
     margin-left: -$grid-gap-big/2;
     margin-right: -$grid-gap-big/2;
     margin-top: -$grid-gap-vertical-big;
+
+    @include screen('lg') {
+      margin-left: -(30px/2);
+      margin-right: -(30px/2);
+      margin-top: -40px;
+    }
   }
 
   &__col {
@@ -58,6 +64,10 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
 
     #{$b}_big & {
       padding: $grid-gap-vertical-big $grid-gap-big/2 0;
+
+      @include screen('lg') {
+        padding: 40px (30px/2) 0;
+      }
     }
   }
 }
