--- a/app/pages/account-settings/account-settings.pug
+++ b/app/pages/account-settings/account-settings.pug
@@ -35,8 +35,8 @@ block content
               +col({xl: 6, sm: 12 }).grid__col_mob-order2
                 +form-section-wrapper
                   +form-box('Phone number')._phone
-                    +input(type="tel" name="phone-code" value="+44" placeholder="Phone code").form-box__phone_code
-                    +input(type="tel" name="phone-number" value="768 968 98983" placeholder="Phone number").form-box__phone_number
+                    +input(type="tel" name="phone-code" value="+44" placeholder="Phone code" data-tel-code).form-box__phone_code
+                    +input(type="tel" name="phone-number" value="768 968 98983" placeholder="Phone number" data-tel-number).form-box__phone_number
               +col({xl: 6, sm: 12 })
                 +form-section-wrapper
                   +form-box('E-mail adress')
@@ -48,12 +48,14 @@ block content
             +grid.grid_big
               +col({xl: 6, sm: 12 })
                 +form-section-wrapper
-                  +form-box('Old password')._password
+                  +form-box('Old password')._password.js-password-field
                     +input(type="password" name="oldPassword" value="EugeneEugene" placeholder="Old password" readonly)
+                    +e.SPAN.password-mask(data-password-mask)
               +col({xl: 6, sm: 12 }).grid__col_mob-order2
                 +form-section-wrapper
-                  +form-box('New password')._password
+                  +form-box('New password')._password.js-password-field
                     +input(type="password" name="newPassword")
+                    +e.SPAN.password-mask(data-password-mask)
               +col({xl: 6, sm: 12 })
                 +form-section-wrapper
                   +form-section-text._compensate
@@ -61,8 +63,9 @@ block content
                     +link(href="#")._gray._underline Recover the password VIA E-mail adress
               +col({xl: 6, sm: 12 }).grid__col_mob-order2
                 +form-section-wrapper
-                  +form-box('New password one more time')._password
+                  +form-box('New password one more time')._password.js-password-field
                     +input(type="password" name="newPasswordConfirm")
+                    +e.SPAN.password-mask(data-password-mask)
           +form-section._bmg
             +form-section-header
               +form-section-title Profile Data
