--- a/app/blocks/header-user/header-user.scss
+++ b/app/blocks/header-user/header-user.scss
@@ -7,13 +7,8 @@
   box-sizing: border-box;
   padding-right: 18px;
 
-  @include screen('lg') {
+  @include screen('xl') {
     padding-right: 0;
-    margin-right: -5px;
-  }
-
-  @include screen('sm') {
-    margin-right: 0;
   }
 
   &__user {
