--- a/app/layouts/default-login.pug
+++ b/app/layouts/default-login.pug
@@ -4,7 +4,7 @@ include _internalIncludes
 doctype html
 html(lang='en')
   include head
-  body.is-panel.is-login
+  body.is-login
     +header.is-login
 
     +b.MAIN.page
@@ -16,7 +16,7 @@ html(lang='en')
     +overlay
     +main-menu
     block panels
-    +footer._panel-padding
+    +footer
     script(src='assets/scripts/libs/object-assign-auto.min.js')
     script(src='assets/scripts/app.min.js')
     script(src='assets/scripts/main.js')
