some form scripts and main menu for account settings page

--- a/app/blocks/button/button.pug
+++ b/app/blocks/button/button.pug
@@ -2,3 +2,10 @@ mixin button(newtag)
   +b(newtag || 'a').button&attributes(attributes)
     +e.SPAN.text
       block
+
+mixin button-icon(newtag, icon)
+  +b(newtag || 'a').button&attributes(attributes)
+    +e.SPAN.text
+      block
+    +e.icon
+      +icon(icon).icon
