--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -16,6 +16,14 @@
     }
   }
 
+  &_back {
+    padding-left: 28px;
+
+    @include screen('sm') {
+      padding-left: 20px;
+    }
+  }
+
   &_bold {
     font-weight: 700;
   }
@@ -54,6 +62,13 @@
 
     #{$b}:hover &_download {
       transform: translate3d(0, -40%, 0);
+    }
+
+    &_select-arrow {
+      width: 12px;
+      height: 7px;
+      transform-origin: 50% 50%;
+      transform: translate3d(0, -50%, 0) rotate(90deg);
     }
   }
 
