--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -195,7 +195,7 @@
     }
   }
 
-  body:not(.is-panel) .header.is-login~& {
+  body.is-login & {
     @include screen('lg') {
       padding-bottom: 70px;
     }
@@ -205,7 +205,7 @@
     }
   }
 
-  &_panel-padding {
+  body.is-panel & {
     @include screen('lg') {
       padding-bottom: 70px;
     }
