--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -11,3 +11,6 @@ block content
         +link(href="index.html") Main (index.html)
         +link(href="space.html")  One Space (space.html)
         +link(href="account-settings.html")  Account settings (account-settings.html)
+
+block panels
+  +main-menu
