--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -79,6 +79,7 @@
     background-color: $color-bg;
 
     span {
+      min-width: 10px;
       width: 10px;
       height: 10px;
       border-radius: 50%;
