--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -1,6 +1,10 @@
 .form {
   $b: &;
 
+  position: relative;
+  display: block;
+  width: 100%;
+
   &__section {
     display: block;
     width: 100%;
@@ -10,7 +14,7 @@
     padding: 0;
     margin: 0;
 
-    &:not(:last-child) {
+    &:not(:last-of-type) {
       margin-bottom: 85px;
 
       @include screen('lg') {
@@ -23,7 +27,7 @@
     }
 
     &_bmg {
-      &:not(:last-child) {
+      &:not(:last-of-type) {
         margin-bottom: 95px;
 
         @include screen('lg') {
@@ -32,7 +36,7 @@
       }
 
       &_ext {
-        &:not(:last-child) {
+        &:not(:last-of-type) {
           @include screen('lg') {
             margin-bottom: 90px;
           }
@@ -159,6 +163,61 @@
         display: inline-block;
         width: 100%;
       }
+    }
+  }
+
+  &__panel {
+    &_fixed {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      transition:
+        opacity $ease-main,
+        bottom $ease-main;
+      opacity: 0;
+      pointer-events: none;
+
+      @include screen('lg') {
+        position: fixed;
+        border-top: 1px solid $color-border-light;
+        padding: 0 $container-padding-tablet;
+        z-index: 4;
+      }
+
+      @include screen('sm') {
+        padding: 0 $container-padding-mobile;
+      }
+
+      body.is-login .page.is-short & {
+        @include screen('lg') {
+          bottom: 70px;
+        }
+
+        @include screen('sm') {
+          bottom: 50px;
+        }
+      }
+
+      &.is-active {
+        opacity: 1;
+        pointer-events: auto;
+      }
+    }
+  }
+
+  &_pb {
+    padding-bottom: 104px;
+
+    @include screen('xl') {
+      padding-bottom: 88px;
+    }
+
+    @include screen('lg') {
+      padding-bottom: 102px;
+    }
+
+    @include screen('sm') {
+      padding-bottom: 70px;
     }
   }
 }
